Fix for radios on firefox

--- a/packages/wc-compass/src/styles/_forms.scss
+++ b/packages/wc-compass/src/styles/_forms.scss
@@ -195,101 +195,6 @@
   }
 }
 
-.cdg-radio {
-  display: inline-flex;
-  gap: 8px;
-  align-items: center;
-  position: relative;
-  border-radius: 4px;
-
-  input[type='radio'] {
-    opacity: 0;
-    position: relative;
-    z-index: 1;
-    margin: 4px;
-    width: 16px;
-    height: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    flex-shrink: 0;
-    appearance: none;
-  }
-
-  span {
-    padding-right: 3px;
-  }
-
-  &.custom-content {
-    padding: 16px;
-    flex-shrink: 0;
-    flex: 1;
-    align-items: stretch;
-    &::before {
-      left: 16px;
-    }
-    &::after {
-      left: 21px;
-    }
-    .radio-content {
-      display: flex;
-      flex-direction: column;
-    }
-    .radio-title {
-      font-weight: 600;
-    }
-  }
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    cursor: none;
-  }
-
-  &::after {
-    top: 50%;
-    left: 8px;
-    width: 8px;
-    height: 8px;
-    transform: scale(0) translateY(-50%);
-    border-radius: 4px;
-    background-color: var(--accent);
-  }
-
-  &::before {
-    width: 1rem;
-    height: 1rem;
-    border: 1px solid var(--primary-color);
-    border-radius: 1.5rem;
-    inset: 3px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  &:focus-within {
-    outline: 2px solid var(--blue60);
-  }
-
-  &:has(input[type='radio']:checked) {
-    &::before {
-      border-color: var(--accent);
-    }
-    &::after {
-      transform: scale(1) translateY(-50%);
-    }
-  }
-
-  &:has(input[type='radio']:disabled) {
-    color: var(--disabled-color);
-    &::before {
-      border-color: currentColor;
-    }
-    &::after {
-      background-color: currentColor;
-    }
-  }
-}
-
 .cdg-toggle {
   display: inline-flex;
   gap: 8px;
